styles/main.css
.main-logo {
    position: absolute;
    top: 150px;
    left: 500px;
}

#Search {
    position: absolute;
    top: 270px;
    left: 399px;
    width: 30%;
    border-radius: 25px;
    height: 25px;
    width: 500px;
    border: 1px solid grey;
}

nav {
    text-align: right;
    vertical-align: text-top;
    margin-top: -13px;
}

.navigation {
    display: inline;
    margin: 5px;
}

#profile-image {
    vertical-align: middle;
    border-radius: 50%;
    height: 32px;
    width: 32px;
    margin-top: 7.8px;
}

#menu-image {
    vertical-align: middle;
    margin-top: 7.8px;
    height: 25px;
    width: 25px;
}

nav a {
    font-size: small;
    text-decoration: none;
    color: black;
}

footer a {
    font-size: small;
    text-decoration: none;
    color: grey;
}

footer {
    position: relative;
    top: 540px;
    padding: 25px;
    background-color: #f2f2f2;
    color: grey;
}

li.footer {
    display: inline;
}

.footer-left {
    position: absolute;
    bottom: 0;
    left: 0;
}

li {
    margin: 8px;
}

.footer-right {
    position: absolute;
    bottom: 0;
    right: 0;
}

.buttons {
    position: absolute;
    top: 310px;
    left: 540px;
}

.Search-btn, .Feeling-lucky-btn {
    background-color: #f8f9fa;
    border: 1px solid #dadce0;
    height: 35px;
    border-radius: 9%;
}

.Search-btn {
    margin-right: 10px;
}

